--- a/menu.html
+++ b/menu.html
@@ -19,17 +19,17 @@
         <p class='doc_line'>今、我の道示したる</p>
         <p class='doc_line'>いざ、進まん</p>
     </div>
-    <form>
+    <form action="./mail.php" method="post">
       <div id='contact'>
         <h3 id="title">申し言</h3>
         <h3 id="name">お名前<span style="font-size:3vh;">(十文字以内)</span></h3>
-        <input type="text" maxlength=10  id="iname">
+        <input type="text" maxlength=10 name="iname" id="iname">
         <h3 id="san">さん</h3>
         <h6 id="reply">返信先(メールアドレス)</h6>
-        <input type="text"  id="ireply">
+        <input type="text"  name="ireply" id="ireply">
         <h6 id="detail">記入欄<span style="font-size:3vh;">(百二十文字以内)</span></h6>
-        <textarea rows="4" cols="30" id="idetail" maxlength="120">ここに記入してください</textarea>
-        <input type="submit" class="form" id="send" value="送信" onClick=send()>
+        <textarea rows="4" cols="30" name="idetail" id="idetail" maxlength="120">ここに記入してください</textarea>
+        <input type="submit" class="form" name="send" id="send" value="送信" onClick=send()>
         <input type="reset"  class="form" id="mod"  value="消去">
         <h6 class="form" id="cancel" onclick="cancel()">閉じる</h6>
       </div>
